fix: fix horizontal scrollbar appearing on mobile view

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,6 +49,7 @@ body {
 }
 
 #root {
+  overflow-x: clip;
   display: flex;
   flex-direction: column;
   align-items: center;
